--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Dancer2::Template::TemplateFlute - Template::Flute wrapper for Dancer2
 
 VERSION
-    Version 0.200_01_TEST
+    Version 0.201
 
 DESCRIPTION
     This class is an interface between Dancer2's template engine abstraction
@@ -35,24 +35,26 @@ DESCRIPTION
     below.
 
       engines:
-        template_flute:
-          iterators:
-            fruits:
-              class: JSON
-              file: fruits.json
+        template:
+          template_flute:
+            iterators:
+              fruits:
+                class: JSON
+                file: fruits.json
 
   FILTER OPTIONS
     Filter options and classes can be specified in the configuration file as
     below.
 
       engines:
-        template_flute:
-          filters:
-            currency:
-              options:
-                int_curr_symbol: "$"
-            image:
-              class: "Flowers::Filters::Image"
+        template:
+          template_flute:
+            filters:
+              currency:
+                options:
+                  int_curr_symbol: "$"
+              image:
+                class: "Flowers::Filters::Image"
 
   ADJUSTING URIS
     We automatically adjust links in the templates if the value of
@@ -74,11 +76,12 @@ DESCRIPTION
     You can specify classes with the following syntax:
 
       engines:
-        template_flute:
-          autodetect:
-            disable:
-              - My::Class1
-              - My::Class2
+        template:
+          template_flute:
+            autodetect:
+              disable:
+                - My::Class1
+                - My::Class2
 
     The class matching is checked by Template::Flute with "isa", so any
     parent class would do.
@@ -98,10 +101,11 @@ DESCRIPTION
     "try_to_translate" method.
 
       engines:
-        template_flute:
-          i18n:
-            class: MyApp::Lexicon
-            method: try_to_translate
+        template:
+          template_flute:
+            i18n:
+              class: MyApp::Lexicon
+              method: try_to_translate
 
     A class could be something like this:
 
@@ -143,14 +147,15 @@ DESCRIPTION
     configuration. Like this:
 
       engines:
-        template_flute:
-          i18n:
-            class: MyApp::Lexicon
-            method: localize
-            options:
-              append: 'X'
-              prepend: 'Y'
-              lexicon: 'path/to/po/files'
+        template:
+          template_flute:
+            i18n:
+              class: MyApp::Lexicon
+              method: localize
+              options:
+                append: 'X'
+                prepend: 'Y'
+                lexicon: 'path/to/po/files'
 
     This will call
 
@@ -171,15 +176,17 @@ DESCRIPTION
     Example configuration:
 
       engines:
-        template_flute:
-          check_dangling: 1
+        template:
+          template_flute:
+            check_dangling: 1
 
     When the environment is set to "development" this feature is turned on
     by default. You can silence the logs by setting:
 
       engines:
-        template_flute:
-          disable_check_dangling: 1
+        template:
+          template_flute:
+            disable_check_dangling: 1
 
   FORMS
     Dancers::Template::TemplateFlute has a form plugin
